# mini-bot

./: CMakeLists.txt  README.md  check_ollama.ps1  requirements.txt  simple_test.cpp  test_ollama.cpp  vcpkg.json
include/: BotService.hpp  ChatSession.hpp  OllamaClient.hpp  ToolRegistration.hpp  ToolRegistry.hpp  util.hpp
scripts/: run_ollama.ps1  run_ollama.psl
src/: BotService.cpp  ChatSession.cpp  OllamaClient.cpp  ToolRegistration.cpp  ToolRegistry.cpp  main.cpp  main_cli.cpp  main_cli_sync.cpp
src/tool/: tool_calc.cpp  tool_wearther.cpp
tests/: test_sse.py
ui/qt/: CMakeLists.txt
